# usg-analytics

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
code_usg/: __init__.py  config.py  evaluation.py  features.py  io_utils.py  modeling.py  pipeline.py  plots.py  seed.py  tuning.py
conf/: params.yml
notebooks/: starter.ipynb
scripts/: describe_and_plot.py  run_analysis.py  tune_rf.py
tests/: conftest.py  test_config.py  test_features.py  test_modeling.py  test_pipeline.py
