[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# choose what you like; this is a sane default
select = ["E", "F"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"